testsuite/poke.pkl/xor-diag-1.pk
/* { dg-do compile } */

var a = 929991111111
        ^ "foo"; /* { dg-error "invalid operand.*\n.*expected integral" } */
